# pdfhl

./: .gitignore  AGENTS.md  README-ja_JP.md  README.md  icpc-2022-zhu.recipe.json  memo.md  memo2.md  memo3.md  memo4.md  memo5.md  pyproject.toml  sample.py  vulture_whitelist.py
.serena/: project.yml
dev-notes/: chat-2025-09-14.md  discussion.md  session-2025-09-13.md  session-2025-09-14.md  session-2025-09-20.md  tmp-experiments-seq-70-spaced.json  tmp-experiments-seq-gap800.json  tmp-experiments-seq.json
examples/: recipe-with-items-object.json  sample.md  simple-recipe-array.json
extra-utils/: pdftopages  prompt-paper-highlights.txt  run-vulture.sh
src/pdfhl/: __about__.py  __init__.py  pdfhl.py  segmentation.py
tests/: conftest.py  test_cli_parse.py  test_group_bboxes.py  test_progressive_search.py  test_sequence_matching.py  test_text_normalization.py
